@@ -49,6 +49,7 @@ https://github.com/elastic/beats/compare/v6.1.1...6.1[Check the HEAD diff]
 *Auditbeat*
 
 *Filebeat*
+- Switch to docker prospector in sample manifests for Kubernetes deployment {pull}5963[5963]
 
 *Heartbeat*
 
